--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,12 @@
-find_package(GTest)
+include(FetchContent)
+FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 find_package(Threads)
 enable_testing()
 include(GoogleTest)
