--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,6 @@ services:
     # ports:
     #   - "7890:7890"
     volumes:
-      - .:/home/ECE408:rw
-    working_dir: /home/ECE408
+      - .:${DIR}:rw
+    working_dir: ${DIR}
 version: '3'
