--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,14 @@ cmake_minimum_required(VERSION 3.20)
 project(ECE408)
 enable_language(CUDA)
 
-include_directories(${CMAKE_SOURCE_DIR}/include)
+set(CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES
+    "/opt/cuda/include;/usr/local/cuda/include")
+
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 
 add_subdirectory(matrix_multi_tile)
-# add_subdirectory(matrix_same)
-#
+add_subdirectory(matrix_same)
+
 add_subdirectory(test)
