--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,14 +12,6 @@ find_package(Threads)
 enable_testing()
 include(GoogleTest)
 
-# Test matrix_multi_tile
-add_executable(test_matrix_multi_tile "test_matrix_multi_tile.cpp")
-target_link_libraries(test_matrix_multi_tile
-    GTest::gtest_main
-    Threads::Threads
-    matrix_multi_tile)
-gtest_discover_tests(test_matrix_multi_tile)
-
 # Test matrix_same
 add_executable(test_matrix_same "test_matrix_same.cpp")
 target_link_libraries(test_matrix_same
@@ -27,3 +19,12 @@ target_link_libraries(test_matrix_same
     Threads::Threads
     matrix_same)
 gtest_discover_tests(test_matrix_same)
+
+# Test matrix_multi_tile
+add_executable(test_matrix_multi_tile "test_matrix_multi_tile.cpp")
+target_link_libraries(test_matrix_multi_tile
+    GTest::gtest_main
+    Threads::Threads
+    matrix_multi_tile
+    matrix_same)
+gtest_discover_tests(test_matrix_multi_tile)
