Split matrix_multi_tile_simple into seperate file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 
+add_subdirectory(matrix_multi_tile_simple)
 add_subdirectory(matrix_multi_tile)
 add_subdirectory(matrix_same)
 
