--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,15 @@ target_link_libraries(test_matrix_same
     matrix_same)
 gtest_discover_tests(test_matrix_same)
 
+# Test matrix_multi_tile_simple
+add_executable(test_matrix_multi_tile_simple "test_matrix_multi_tile_simple.cpp")
+target_link_libraries(test_matrix_multi_tile_simple
+    GTest::gtest_main
+    Threads::Threads
+    matrix_multi_tile_simple
+    matrix_same)
+gtest_discover_tests(test_matrix_multi_tile_simple)
+
 # Test matrix_multi_tile
 add_executable(test_matrix_multi_tile "test_matrix_multi_tile.cpp")
 target_link_libraries(test_matrix_multi_tile
