--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,12 +12,14 @@ find_package(Threads)
 enable_testing()
 include(GoogleTest)
 
+link_libraries(ece408)
+
 # Test matrix_same
 add_executable(test_matrix_same "test_matrix_same.cpp")
 target_link_libraries(test_matrix_same
     GTest::gtest_main
     Threads::Threads
-    matrix_same)
+)
 gtest_discover_tests(test_matrix_same)
 
 # Test matrix_multi_tile_simple
@@ -25,8 +27,7 @@ add_executable(test_matrix_multi_tile_simple "test_matrix_multi_tile_simple.cpp"
 target_link_libraries(test_matrix_multi_tile_simple
     GTest::gtest_main
     Threads::Threads
-    matrix_multi_tile_simple
-    matrix_same)
+)
 gtest_discover_tests(test_matrix_multi_tile_simple)
 
 # Test matrix_multi_tile
@@ -34,6 +35,5 @@ add_executable(test_matrix_multi_tile "test_matrix_multi_tile.cpp")
 target_link_libraries(test_matrix_multi_tile
     GTest::gtest_main
     Threads::Threads
-    matrix_multi_tile
-    matrix_same)
+)
 gtest_discover_tests(test_matrix_multi_tile)
