--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/matrix_multi_tile_simple.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/matrix_same.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/vector_multi.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/mat_mul_coarse.cu
     # ${CMAKE_CURRENT_SOURCE_DIR}/.cpp
 )
 
