update after afk :D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(ECE408)
 
-set(CMAKE_CUDA_HOST_COMPILER "/usr/bin/clang")
+# set(CMAKE_CUDA_HOST_COMPILER "/usr/bin/gcc")
 enable_language(CUDA)
 
 # set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_INCLUDES 0)
