--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/matrix_same.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/vector_multi.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/mat_mul_coarse.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/convolution.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/stencil_kernel.cu
     # ${CMAKE_CURRENT_SOURCE_DIR}/.cpp
 )
 set(CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES
@@ -20,4 +22,4 @@ target_link_libraries(tools PRIVATE cuda)
 target_include_directories(
     tools PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
     ${CMAKE_SOURCE_DIR}/inc)
-target_link_directories(tools PRIVATE "/opt/cuda/targets/x86_64-linux/lib")
+target_link_directories(tools PRIVATE cuda)
